[package]
name = "redundant_discrimation_trees"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#ord_list_set = {path = "/home/peter/GitHub/rs_ord_set_ops_iter/ord_list_set"}
ord_list_set = { git = "https://github.com/pwil3058/rs_ord_set_ops_iter.git"}
#ord_set_iter_set_ops = {path = "/home/peter/GitHub/rs_ord_set_ops_iter/ord_set_iter_set_ops"}
ord_set_iter_set_ops = { git = "https://github.com/pwil3058/rs_ord_set_ops_iter.git"}
