[package]
name = "redundant_discrimation_trees_bts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#ord_set_ops_iter = {path = "/home/peter/GitHub/rs_ord_set_ops_iter/ord_set_ops_iter"}
ord_set_iter_set_ops = {path = "../ord_set_iter_set_ops"}
ord_list_set = {path = "../ord_list_set"}